Bug fixes (#277)
* Prevent exec card name from overflowing

* Fix import of database update function

* Replace banner with correct colors lol

* Fix scaling on mobile about header

* Increase club card display size

--- a/client/src/components/about/about.scss
+++ b/client/src/components/about/about.scss
@@ -65,8 +65,9 @@
     }
 
     .about-header {
-        width: 90%;
-        height: fit-content;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 
     #feedback-form {
