--- a/client/src/components/clubs/clubs.scss
+++ b/client/src/components/clubs/clubs.scss
@@ -20,6 +20,8 @@
 @include media-phone-down {
     .club-card-list {
         padding: 1rem 0 0.5rem;
-        grid-template-columns: repeat(auto-fill, 7rem);
+        grid-template-columns: repeat(auto-fill, 50%);
+        row-gap: 0.75rem;
+        align-items: center;
     }
 }
